# astronomical-reduction-tool

./: .coverage  .gitignore  .pre-commit-config.yaml  AIRT.sh  AIRT.spec  AUTHORS.md  README.md  app.py  coverage.xml  create_airt_desktop_entry.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup_environment.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
astronomical_reduction_tool/: README.md  app.py  requirements.txt  run_app.bat  setup_environment.bat
astronomical_reduction_tool/reduction_tool/: calibration.py  io.py  models.py  plotting.py  processing.py
legacy/: README.md
legacy/tkinter/: README.md
legacy/tkinter/reduction_tool/: __init__.py  models.py  plotting.py
reduction_tool/: io.py  models.py  plotting.py  processing.py
scripts/: build.ps1  check.ps1  run_qt_dev.ps1  test.ps1
src/airt/: __main__.py  app.py
src/airt/core/: bands.py  color_mapping.py  file_scan.py  final_render.py
src/airt/project/: __init__.py  io.py  model.py  recent.py
src/airt/qt/: __init__.py  theme.py
src/airt/qt/widgets/: action_card.py  fits_preview_dialog.py  footer_bar.py  step_sidebar.py
src/airt/qt/wizard/: alignment_step.py  background_step.py  files_step.py  final_composition_step.py  folders_step.py  frame_review_step.py  placeholder_step.py  preset_step.py  processing_step.py  welcome_step.py  wizard_window.py
tests/: test_bands.py  test_color_mapping.py  test_final_render.py
