[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astronomical-image-reduction-tool"
version = "0.1.0"
description = "Astronomical Image Reduction Tool"
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "numpy",
    "astropy",
    "scipy",
    "matplotlib",
    "Pillow"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
